# technical_indicators

./: .gitignore  README.md  notes.txt  pyproject.toml  results.txt  results_SOXX.csv  v3.ipynb  walkforward_metrics.csv  walkforward_metrics_FDN.csv  walkforward_metrics_GDX.csv  walkforward_metrics_GUSH.csv  walkforward_metrics_QQQ.csv  walkforward_metrics_SMH.csv  walkforward_metrics_SOXX.csv  walkforward_metrics_SPY.csv  walkforward_metrics_XLF.csv  walkforward_metrics_XLRE.csv  walkforward_metrics_XLV.csv
src/tech_ts/: hmm_test.py  walkforward_backtest.py
src/tech_ts/analysis/: analysis_utils.py  indicator_diagnostics.py
src/tech_ts/back_testing/: back_testing.py
src/tech_ts/data/: constants.py  date_config.py  fetch_data.py
src/tech_ts/feature_engineering/: auto_lag.py
src/tech_ts/indicators/: indicators.py
src/tech_ts/models/: arimax_model.py
src/tech_ts/parameter_tuning/: rolling_tuning.py
src/tech_ts/preprocessing/: stationarity_tools.py
src/tech_ts/regime_detection/: ml_classifier.py  regime_detection.py  regime_utils.py
walkforward_outputs/FDN/: walkforward_metrics.csv
walkforward_outputs/GDX/: walkforward_metrics.csv
walkforward_outputs/GUSH/: walkforward_metrics.csv
walkforward_outputs/QQQ/: walkforward_metrics.csv
walkforward_outputs/SOXX/: walkforward_metrics.csv
walkforward_outputs/SPY/: walkforward_metrics.csv
walkforward_outputs/XLF/: walkforward_metrics.csv
walkforward_outputs/XLK/: walkforward_metrics.csv
walkforward_outputs/XLRE/: walkforward_metrics.csv
walkforward_outputs/XLV/: walkforward_metrics.csv
(+20 files in other folders)
